corrections complete upto page no. 605

--- a/tex-for-print/anubandha-1.tex
+++ b/tex-for-print/anubandha-1.tex
@@ -622,7 +622,6 @@ gotitxlalxdirabahudu. Adare pariNAmavilalxda GaTanegaLilalx.}}
 \ullekha{`dugaRMdhava kaLedu sugaMdhavanu GArxNadiMda liMgakakxpiRsuvalilx savxyaBAjanavoV, liMgaBAjanavoV?' (savasaM. 3; cenanxba. 227-72).}}
 \end{entry}
 
-
 %%%ja
 \begin{entry}
 \word{jaMgamaniMdaka}
@@ -747,3 +746,387 @@ harivina juLujuLu shabadx horaDu\-vudeV ilalx:}
 \end{entry}
 
 %\end{multicols}
+
+%%%%ta
+\begin{entry}
+\word{tatatxvXvelalxkakxdhikavAgipApxta}
+\src{va}
+\meaning{\arthanonum{mUvatetxYdu tatatxvXgaLanunx oLagoMDu avugaLanunx miVri, avugaLanunx niyaMtirxsuvAta, parashiva:}
+\ullekha{tatatxvXvelalxkakxdhikavAgipApxtanu ajagaNaNxne, mahAtatatxvXvu ajagaNaNxne, shirxVgurutatatxvXvu ajagaNaNxne, paratatatxvXvu ajagaNaNxne (savasaM. 5; mukAtxyakakx. 1107-327).}}
+\end{entry}
+
+
+\begin{entry}
+\word{tadagxtanAguvudu}
+\src{va}
+\meaning{\arthanonum{aMganu liMgadiMda baMdavanAdudariMda, avanu tadagxtanAguvudeMdare, liMgadalelxV matetx liVnavAguvudeMdathaR:}
+\ullekha{anAdiyalilx nimamxlilx tadagxtanAgideRnayAyx (savasaM. 4; sidadhxrA. 1366-395).}}
+\newmeaning{\ni{tatarxgataH - tadagxtaH; tasimxnf gataH - tadagxtaH}}
+\end{entry}
+
+\begin{entry}
+  \word{tananx mareyuvudu}
+  \src{va}
+\meaning{\arthanonum{idakekx eraDu athaRgaLuMTu. anuBAvadalilx sAdhakanu liMga  athavA parashivananunx mareyuvudU alalxde tananxnUnx mareyutAtxne eMbudu oMdu athaR.}}
+\newmeaning{\arthanonum{ajAcnxniyu tananx nijasavxrUpavanunx maretare, adU
+ tananxnunx maretaMteyeV. modalaneya athaRda parxkAra, tananx
+ mareyuvudariMda tAnu idirugaLa devxYta aLiyutatxde. eraDaneya athaRda
+ parxkAra, ajAcnxna inUnx iruvudariMda devxYtavU irutatxde:}
+\ullekha{alilx tananx maredu, tanagilalxduda BarxmeyiMda tananxdeMdu aMtapapx BavaGoVra narakadoLALutatx muLugADutitxpapx ajAcnxni jiVvigaLu nimamxnetatx balalxrayAyx (savasaM. 5; moVLimA. 1195-357).}}
+\end{entry}
+
+\begin{entry}
+\word{tananxlilx tAnu taqpitxyAguvudu}
+\src{va}
+\meaning{\arthanonum{manasusx iMdirxyagaLa mUlaka viSayagaLanunx anuBavisi
+ taqpitx paDutatxde. idu elalxrigU gotitxruva vicAra. Adare
+ Bakatxnu tananx manasasxnunx yAva viSayada kaDegU tirugisade,
+ keVvala anuBAvada mUlaka tananxnunx aritanAdare, Aga avanu parama
+ suKi. A suKa tananxlilx tAnu taqpitxyAda nijavu:}
+\ullekha{adu tananxlilx tAnu taqpitxyAda nijavu (nilavu?) niNaRyada meVle nidhaRravAyitutx noVDA (savasaM. 2; alalxma. 1444-428).}}
+\end{entry}
+
+\begin{entry}
+\word{tanu karaguvudu}
+\src{va}
+\meaning{\artha{aMgavu liMgadalilx aikayxvAdAga sAdhakanige tanage
+ deVheVMdirxyAdigaLu ilalx, tAneMdare keVvala Atamx eMba BAvane
+ uMTAgutatxde. I BAvane uMTAda kelavu dAshaRnikaru (udA :
+ cidadevxYtigaLu) deVheVMdirxyAdigaLu asatf eMdU, Atamx mAtarx satf
+ eMdU vAdisutAtxre. Adare viVrasheYvaru deVheVMdirxyAdigaLu
+ parashivana shakitxya vividha rUpagaLAdudariMda avU parashivanaSeTxV
+satayx eMdu sArutAtxre:}
+\ullekha{Alikalalx haraLinaMte, aragina putathxLiyaMte tanu karagi nereva suKavanAneVneMbe (savasaM. 1; basava. 848-218).} \artha{tanu karaguvudu athavA tanu hALAguvudu athavA tanuva keDisuvudu eMdare, deVhada  avaguNagaLanunx ilalxvAgisuvudu. ililx avaguNagaLeMdare AhAra, niderx, meYthuna muMtAda deVhakekx saMbaMdhisida bayakegaLu eMdAgutatxde. anuBAvadiMdAgi shivanalilx oMdAdavanu deVhada bayakegaLanunx gelulxvudariMda avana tanu karagutatxde, athavA hALAgutatxde:}
+\ullekha{ayAyx, nimamx anuBAvadiMda enanx tanu hALAyitayAyx... nimamxvaru aDigaDige heVLi BakitxyeMbiV oDaveyanu diTava mADi toVridaru kANA (savasaM. 1; basava. 509-123).}}
+\end{entry}
+
+
+\begin{entry}
+\word{tanudhamaRva taraharisuvudu}
+\src{va}
+\meaning{\arthanonum{deVhada kiVLuguNagaLa parxBAvavanunx kaDime mADuvudu:}
+\ullekha{tanudhamaR taraharisi, manada saMcalavaLidu oLage nuNaNxgAgabalalxDe boVLakAkAra, boVLanivARNigaLeMbe (savasaM. 5; dapudiV. 740-48).}}
+\newmeaning{\arthanonum{\SEE{tanu karaguvudu}}}
+\end{entry}
+%pUvaRbiVja vAyupArxNiyalalx... nimumxva pUjisi tanudhamaRva maredu... (savasaM. 1; basava. 766-191);  uriyaMgavelalx... tanudhamaRvanaritu carisabalalxDe jaMgama... (savasaM. 6; arimA. 577-173); shAMtasuKaviralolalxde... tanudhamaRvilalxdacala niVneV... (savasaM. 7; caMdima. 679-220); tanudhamaRva kaMDu manadhamaRvanaridu,... (savasaM. 7; dAsoVsaM. 1104-345); tanudhamaRva kaMDu manadhamaRvanaridu... (savasaM. 7; tururA-(vacana saMcaya)).
+
+\begin{entry}
+\word{tirxguNAtamxkana kolulxvudu}
+\src{va}
+\meaning{\arthanonum{tirxguNAtamxkanAda parashivananunx matotxbabxnaMte BAvisade,
+ avanalilx oMdAguvudu. tAnu matutx parashivanalilxna I vayxtAyxsa
+ hoVda kUDaleV parashivaneMba anayxvasutxvU
+ ilalxvAgutatxde. matotxMdathaRdalilx tirxguNagaLa mitige
+ oLapaDadiruvudeV tirxguNAtamxkanAda jiVvananunx kolulxvudu
+ eMdAgutatxde:}
+\ullekha{tirxsaMdhiyalilx niMdu, tirxguNAtamxna koMdu, keladalilx niMdavanAreMbuda tiLi (savasaM. 7; koVlashAM. 115-49)}}
+\end{entry}
+
+\begin{entry}
+\word{teVjada pUvARsharxyava kaLeyuvudu}
+\src{va}
+\meaning{\arthanonum{mAnava deVhada GaTakagaLalolxMdAda aginx (teVja) tatatxvXkekx
+ rUpavu muKayx guNa. I tatatxvXda deseyiMdAgi pArxpaMcikarige
+ kurUpavanunx noVDidare ahitavU surUpavanunx noVDidare hitavU Agi,
+ surUpavanenxV sadA noVDabeVkeMba Ase uMTAgutatxde. aMtha Aseyu
+ sAvxthaRparavAdudu. Adare sadaBxkatxnAdavanu rUpavanunx kurUpa
+ matutx surUpaveMdu viMgaDisidarU, oMdanunx devxVSisi matotxMdanunx
+ pirxVtisuvudilalx. avanige yAvudeV sAvxthaRpara Ase
+ ilalxvAdudariMda, averaDU avanige samAna. AdhAyxtimxka
+ parxgatiyalilx muMduvareda kela Bakatxru `noVDuvudAdare liMgavanenxV'
+ eMdu tiVmARnisidare, matetx kelavaru `iruvudelalxvU shivashakitxya
+ rUpAMtaraveV AdudariMda, elalxvU surUpaveV' enunxtAtxre. avarige
+ swMdayaRvilalxda tANaveV ilalx, hiVge avaru teVjada pUvARsharxyava
+ kaLedidAdxre (va.pa.koV. 183).}} 
+\end{entry}
+
+
+%%%da
+\begin{entry}
+\word{dashavidha vAyugaLanunx nililxsuvudu}
+\src{va}
+\meaning{\arthanonum{pArxNa, vAyxna, apAna, udAna, samAna, nAga, kUmaR, kaqkara,
+ deVvadatatx matutx dhanaMjaya eMba hatutx vAyugaLa deseyiMdAgi
+ shariVra matutx aMtaHkaraNagaLalilx oLeLxya matutx keTaTx
+ caTuvaTikegaLu naDeyutitxrutatxve. aikayxsithxtiyanunx
+ talupabeVkenunxvavanu I vAyxpAragaLanunx niyaMtirxsi 
+ avugaLanunx adhAyxtamxsAdhanege upayoVgisikoLaLxbeVku. Aga
+ vAyupArxNiyAgidadxvanu liMgapArxNiyAgutAtxne. hatutx vAyugaLanunx
+ hatutx sAthxnagaLalilx nililxsuvudakekx vivara.}}
+\newmeaning{\arthanonum{pArxNavAyuvanunx pArxNaliMgadalilxyU, apAnavAyuvanunx
+ parxsAdaliMgadalilxyU nililxsabeVku. sAloVkayx, sAmiVpayx, sArUpayx
+ matutx sAyujayx eMba catuviRdha padavi beVkeMba bayakeyanunx
+ aLisihAki, keVvala liMgadhAyxna mADidare, vAyxnavAyuvina
+ duSapxriNAmagaLanunx niyaMtirxsabahudu. udedxVshapUvaRkavAgi nAvu
+ caMcalacitatxrAgi anayxgamana mADuvudu udAnavAyuviniMdAgi.
+ liMgadhAyxna mADidare sucitatxdalilx A vAyuvu nelegoLuLxtatxde hAgU
+ adara duSapxriNAmagaLu kaDimeyAgutatxve. dhAyxnadiMduMTAguva
+ savxyaMjoyxVtiya parxBeyalilx samAna vAyuvanunx nelegoLisi adara
+ duSapxriNAmagaLanunx ilalxvAgisabahudu (va.pakoV. 197):}
+\ullekha{pArxNAdi vAyugaLa kaLedu BakatxrAdaremamxvaru - adeMteMdaDe : alalxlilxdaR dashavAyugaLa dashasAthxnadalilx nilisi Bakitxya mADuva pariya heVLihe keVLiraNANx (savasaM. 3; cenanxba. 1428-511).}}
+\end{entry}
+
+\begin{entry}
+\word{naDegeTaTxvanu}
+\src{va}
+\meaning{\arthanonum{inUnx anuBAvavanunx paDeyadavanu BasamxdhAraNe, iSaTxliMgapUje, maMtorxVcAcxraNe muMtAda vidhigaLanunx tapapxde
+ AcarisutAtxne. Adare, anuBAviyAdavanu liMgAMgasAmarasayxvanunx
+ paDedidudx avanige iMtaha AcAra (naDegaLu) anAvashayxkavAguvudariMda
+ avananunx AlaMkArikavAgi `naDegeTaTxvanu' eMdu kareyabahudu (va.pa.koV. 207):}
+\ullekha{naDegeTaTxvaMge nuDiya haMgeVkoV (savasaM. 5; haDapu. 1261-383).}}
+\end{entry}
+
+\begin{entry}
+\word{nAnu nAnAguvudu}
+\src{va}
+\meaning{\arthanonum{ililx nAnu eMba padavu eraDathaRgaLalilx parxyoVgavAgide. nAnu
+ iMthavanu, nananx kula, nAma, vishiSaTx guNagaLu iMthiMthavu eMbudu
+ modalaneya athaR. nAnu eMdare
+ jiVvAtamx. parashiva eMbudu nAnu eMbudara eraDane athaR.  AdhAyxtimxka sAdhane mADi parashivanalilx oMdAgi jiVvaBAvavanunx
+ maretAga, nAnu parashivaneMba BAva mUDutatxde. Aga nAnu
+ nAnAgutetxVne (va.pa.koV. 212):}
+\ullekha{nAnu nAnAda kAraNa enage guruvilalx (savasaM. 9; rakakxsa. 3-2).}}
+\end{entry}
+
+\begin{entry}
+\word{nAneMbude sakala}
+\src{va}
+\meaning{\arthanonum{namamxlilx ajAcnxnaviruvavaregU nAnu, niVnu, jagatutx, paramAtamx
+muMtAgi beVre beVre mADi ciMtisutetxVve. sakalaveMdare BAgavuLaLxvanu
+eMbathaRviruvudariMda, aKaMDa paravasutxvAda parashivananunx hAgeMdu
+ciMtisuvudu ajAcnxnada kuruhAgutatxde (va.pa.koV. 212):}
+\ullekha{nAneMbude sakala, niVneMbude parxtirUpa (savasaM. 3; moVLima. 1039-364).}}
+\end{entry}
+
+\begin{entry}
+\word{nirAvayavAnaMda saninxhita sharaNa}
+\src{va}
+\meaning{\arthanonum{anuBAvadalilx sAdhakanu parashivaneMba aparimita cititxnalilx
+ beretAga hAgU A citutx avana Atamxdalilx beretAga, avanige horagu -
+ oLagugaLa vayxtAyxsavilalxdaMtAgutatxde. alalxde saguNa-niguRNagaLa
+ BeVdavU, tAnu matutx parashivaneMba BeVdavU ilalxvAgi, elalxvU
+ shUnayx\-vAgutatxde. aMtha sharaNanu shUnayxliMgavanunx noVDi
+ AnaMda\-paDutAtxne. hAgU avanu nirAvayAnaMda saninxhita
+ sharaNa enisikoLuLxtAtxne.}}
+\newmeaning{\ni{nigaRtaH A-samaMtAtf avayavAnAM AnaMdaH - nirAvayavAnaMdaH; nirAvayavAnaMdeVna saninxhitaH yaH sharaNaH saH sharaNaH - nirAvayavAnaMdasaninxhitasharaNaH}}
+\end{entry}
+
+\begin{entry}
+\word{nisasxMgadalilx susaMgi}
+\src{va}
+\meaning{\arthanonum{saMga athavA kUTa uMTAgabeVkAdare kaniSaThx eraDu vasutxgaLu
+ beVku. Adare ililx aikayxsathxlavanunx talupidavana Atamxvu
+ paramAtamxnalilx beretu, tananxnunx tAnu mareyutatxde. Aga A
+ saMgadalilx eraDaneya vasutx tananx parxteyxVkateyanunx
+ kaLedukoMDiruvudariMda, alilx (oMdu visheVSa athaRdalilx)
+ saMgavilalx - alilx nisasxMgavide; AdarU matotxMdathaRdalilx
+ Atamxnige A saMgakikxMta hecucx oLeLxya saMgavilalxvAdudariMda,
+ avanu susaMgiyAgidAdxne eMdathaR (ililx saMga, nisasxMga matutx
+ susaMga eMba padagaLu sAMkeVtikavAgi baLakeyAgide):}
+\ullekha{iMtiV nisasxMgadalilx susaMgiyAda aikayxriMge, baMdha moVkaSx kamaRMgaLeMdu saMdeVhavilalx, niraga niHkaLaMka malilxkAjuRnA (savasaM. 8; 1522-509).}}
+\newmeaning{\ni{suSuThx saMgaH asimxnf asitx iti susaMgiV - nisasxMgadalilx susaMgi}}
+\end{entry}
+
+\begin{entry}
+\word{nuDiye barxhamxvAdavaru}
+\src{va}
+\meaning{\arthanonum{barxhamxda bagege keVvala mAtanADi, naDeyalilx mAtarx lwkikaraMte
+iruvavaru; vAgadevxYtigaLu.}}
+\end{entry}
+
+%%%pa
+\begin{entry}
+\word{paMcaBUtagaLa pariNAmagaLu}
+\src{va}
+\meaning{\arthanonum{manuSayxna shariVravU, adaralilx naDeyuva deYhika hAgU mAnasika vAyxpAragaLU paMca\-BUtagaLa saqSiTx. vacanakArara parxkAra yAvAva BUta yAvudakekx kAraNa eMbudara vivara hiVgide.}}
+\newmeaning{\artha{asithx, camaR, mAMsa, roVma, majejx ivu Gana padAthaR\-gaLAdudariMda, avugaLalilx paqthivx tatatxvXda aMsha parxdhAnavAgirutatxde.}
+\artha{shukalx, shoVNita, shelxVSamx, pitatx, rakatx ivu darxva padAthaRgaLAdudariMda, avugaLalilx jalatatatxvXda aMsha parxdhAnavAgirutatxde.}
+\artha{hasivu, taqSe, Alasayx, sitxrXVsaMga, ivu aginx tatatxvXda pariNAmagaLu.}
+\artha{teraLuvudu, kuLitukoLuLxvudu, ELuvudu, meYmuriyuvudu,
+ naDeyuvudu muMtAda kirxyegaLu vAyuvina pariNAmagaLu.}
+\artha{AnaMdapaDuvudu, duHKapaDuvudu, parxkaTapaDisuvudu, mucicxDuvudu muMtAda mAnasika kirxyegaLelalx AkAsha tatatxvXda pariNAmagaLu:}
+\ullekha{paqthAvxdi paMcaBUtaMgaLu idakekx vivara: asithx, camaR, mAMsa, roVma, majejx iveYdu paqthivxya aMsha. shukalx, shoVNita, shelxVSamx pitatx\-rakatx iveYdu apupxvina aMsha. hasivu, taqSe, niderx, Alasayx, sitxrXVsaMga iveYdu aginxya aMsha (savasaM. 3; cenanxba. 1351-477).}}
+\end{entry}
+
+\begin{entry}
+\word{paMceVMdirxya bayalAguvudu}
+\src{va}
+\meaning{\arthanonum{nAvu sAmAnayxvAgi viSayasuKavanUnx AdhAyxtamxvanUnx parasapxra
+ virudadhxveMbaMte AcarisutetxVve. Adare nijavAda sAdhakana parxkAra
+ nAvu BoVgisuvudelalx namagAgi alalx, parashivanigAgi eMba
+ daqSiTxyiMda BoVgisidare Aga aMgaBoVgavelalx
+ liMgaBoVga\-vAgutatxve. aMtha sharaNana paMceVMdirxyagaLu tamamx
+ sAvxthaR hAgU doVSayukatx guNagaLanunx kaLedukoMDu parashivana
+ paMceVMdirxyagaLAgutatxve athavA avu bayalAgutatxve (va.pa.koV. 240).}}
+\end{entry}
+
+\begin{entry}
+\word{paMceVMdirxyagaLalilx liMgamuKavAgikoLuLxvudu}
+\meaning{\arthanonum{sAdha\-kanu pArxNaliMgi sathxlakekx baMdare, Aga tananx parxti
+ iMdirxya\-vanUnx parashivana bAyiyanAnxgi parivatiRsabeVku. aMdare
+ sAdhakanu, rUparasagaMdha itAyxdigaLanunx tAnu anuBavisuva modalu
+ AyA iMdirxyagaLa bAgilalelxV iruva parashivanu modalu anuBavisaleMdu
+ iciCxsutAtxne. idu iMdirxya\-gaLa doVSavanunx nivArisuva oMdu karxma (va.pa.koV. 240):}
+\ullekha{paMceVMdirxyagaLalilx liMgamuKavAgi koLaLxbeVkeMbaru A iMdirxyagaLa liMgakekx horateye? (savasaM. 8; meremiM. 1349-463).}}
+\end{entry}
+
+\begin{entry}
+\word{parxkaqtidhamaRvanAtamxMgeVrisikAba jaDa}
+\src{va}
+\meaning{\arthanonum{teLaLxge athavA dapapxgiruvudu, etatxra athavA kuLALxgiruvudu,
+ itAyxdi guNagaLu parxkaqti (deVha) guNagaLu. avugaLanunx Atamxkekx
+ AroVpisuvavanu daDaDx (jaDa)nenisikoLuLxtAtxne (va.pa.koV. 251):} \ullekha{parxkaqti dhamaRvanAtamxMgeVrisi kAba jaDa narananeMtu guruveMbe ? (savasaM. 7; caMdima. 657-214).}}
+\end{entry}
+
+\begin{entry}
+\word{parxsAdada pUvARsharxyava kaLeyuvudu}
+\meaning{\arthanonum{oMdu vasutx athavA darxvayxvanunx liMgakekx apiRsidAga adu
+ parxsAdavAgi mApaRDutatxde. A vasutxvinalilx yAva riVtiya rAsAyanika
+badalAvaNeyAgadidadxrU, apaRNe mADuva Bakatxnu adanunx
+kaqtajacnxteyiMda hAgU pAvitarxyXBAvaneyiMda sivxVkarisutAtxne. tAnu
+paDeda vasutxvu shivaneV koTiTxdudu (saqSiTxsidudu) AdudariMda,
+adanunx paDedudakekx kaqtajacnxte toVrisuvudu Bakatxna Adayx
+kataRvayx; shiva keTaTxdadxnunx koDalAra, koTiTxdedxlAlx pavitarxveV
+eMdu sivxVkarisuvudU avana kataRvayx. alalxde pavitarx parxsAdavanunx
+sivxVkarisuvudariMda tAnU pavitarx (shudadhx)nAgutetxVneMba BAvaneyU
+parxsAda sivxVkaraNeya hiMdide. hiVge shivanige apiRsade athavA
+parxsAdiVkarisada vasutxvu sivxVkaraNege ayoVgayx\-vAgirutatxde, hAgU
+apiRsida A pUvARsharxya (sivxVkAra ayoVgayxte) hoVgi, parxsAda
+pavitarxvAgutatxde:}
+\ullekha{liMga jaMgamada parxsAdada pUvARsharxyava kaLeyaleMdu matayxRkekx janisidanayAyx kUDalacenanxsaMgadalilx basavayayx (savasaM. 3; cenanxba. 8-6).}}
+\end{entry}
+
+
+%%%%ba
+\begin{entry}
+\word{bayalarUpa mADuvudu}
+\src{va}
+\meaning{\arthanonum{ililx bayalu eMdare cidAkAsha athavA parashiva
+ eMdathaR. BUtAkAshakekx Agali cidAkAshakekx Agali rUpavilalx. Adare
+ liMgAnuBaviyu tananx yoVga parxtayxkaSxdalilx cidAkAshavanunx
+ kaMDAga adakekx rUpa uMTAyiteMdathaR (va.pa.koV. 266):}
+\ullekha{ikuSxdaMDada tudiya suLiyalilx huTiTxtoMdu giLi... hArADuva bayalarUpu toVrada Agaradalilx hArihoVyitutx (savasaM. 8; manugu. 1038-351).}}
+\end{entry}
+% bayalapuruSana neredu bayalarUpake taMdu... (savasaM. 12; deVshikeVM. 589-178).
+
+
+\begin{entry}
+\word{bayaloLagaNa rUpu, rUpinoLagaNa bayalu}
+\src{va}
+\meaning{\arthanonum{bayalu eMba padavu yAvoMdu guNavU ilalxda parashivana saqSiTxpUvaRsithxtige anavxyavAgutatxde. avanige saqSiTxmADuva
+ shakitxyidadxrU, Aga adU saha supatxsithxtiyalilxrutatxde. rUpu
+ eMdare deVheVMdirxyAdigaLanunxLaLx aMga (Atamx). Adare
+ tAtAkxlikavAgi rUpiruva aMgadalilx parashivana (baya\-lina)
+ aMshaviruvudariMda, aMgavanunx saNaNx bayaleMdU, parashivananunx
+ doDaDx bayalu, cidabxyalu, (cidAkAsha) eMdU kareyabahudu. liMgAMgasAmarasayxdalilx deVheVMdirxyAdigaLU saha tamamx adhoVguNagaLanunx
+ kaLedukoMDu UdhavxRguNagaLanunx paDeyuvudariMda, avu parashivananunx
+utatxmavAgi parxtiPalisutatxve. kuMBadoLage niVru tuMbi samudarxdoLage
+muLugisidare heVge adara oLagU niVru, \hbox{horagU} niVru irutatxdeyoV hAge,
+rUpinoLagaNa saNaNx bayalu (aMga, Atamx) parashivaneMba aparimita
+bayalinoLage liVna\-vAdare, A rUpina oLagU, horagU bayalu uMTAgu\-tatxde (va.pa.koV. 267):}
+\ullekha{bayaloLagaNa baNaNxdaMte, niVrinoLagaNa sAradaMte, anala anila saMgadiMda layavAda sAkAradaMteyipApxtaniravu eMtididxtu. aMte irabalalxDe AtamxyoVgasaMbaMdha (savasaM. 8; mAdAdhU. 1240-432).}}
+\end{entry}
+
+\begin{entry}
+\word{barxhamxna utapxtayxva kaLeyuvudu}
+\src{va}
+\meaning{\arthanonum{idoMdu sAMkeVtika pAriBASika pada. `barxhamxna utapxtayxva kaLedudalalxde liMgakekx majajxnavereyalAgadu' eMba pUNaR vAkayxvanunx tegedu\-koMDare, adara athaR savxlapx sapxSaTxvAgutatxde. barxhamxnu saqSiTxkataRneMbudanUnx, iSaTxliMgavu kalulxkuTigana saqSiTxyeMbudanUnx ililx nAvu hoMdisabeVku. aMdare iSaTxliMga matutx liMgagaLigiruva vayxtAyxsavanunx maretu liMgavU saqSiTxgoLagAgide eMba Barxmeyanunx mareyade idadxre, liMgakekx \hbox{majajxna} mADisabAradu. aMdare, iSaTxliMgavu liMgada saMkeVta eMbudanunx nenapinalilxTuTxkoMDu nAvu liMgapUjeyanunx pArxraMBisabeVku:}
+\ullekha{barxhamxna utapxtayxva kaLedalalxde liMgakekx majajxnavereyalAgadu (savasaM. 8; moVLimA. 1968-632)}}
+\end{entry}
+
+\begin{entry}
+\word{barxhamxna pAshakokxLagAguvudu}
+\meaning{\arthanonum{barxhamxneMdare saqSiTxkataR. inonxMdathaRdalilx kirxyAshakitxya  adhideVvate. kamaR mADidavanu aneVka janAmxMtaragaLalilx huTuTxvudU  alalxde, parxLayada naMtara matetx saqSiTxyAdAgalU avanu tananx  hiMdina kamaR\-kakxnusAravAgiyeV huTuTxtAtxne. hiVge parxtiyobabx  kamiRyU barxhamxna haMgige (pAshakekx)  oLagAdavaneV. parxtiyobabxnalilxyU kirxyAshakitxya  aMshaviruvudariMda, kirxyAshakitxya duSaTx  parxBAvakokxLagAdavarelalxrU barxhamxna vashakekx  oLagAdaMteyeV. elilxyavarege Bakatxru gurupUjakarAgidUdx, barxhamxpAshakekx oLagAgirutAtxroV alilxyavaregU avaru jAcnxnigaLAgalu sAdhayxvilalx (va.pa.koV. 271).}}
+\end{entry}
+
+\begin{entry}
+\word{barxhamxna Bajane hariyuvudu}
+\src{va}
+\meaning{\arthanonum{barxhamxnu parashivana \hbox{Ajecnxya} meVrege saqSiTx mADutAtxne. I saqSiTxyiMdAgi nAvu parashivaniMda beVreyAdevu (Bajane) eMdu tiLiyutetxVve. Adare mukatxrAdAga barxhamxna Bajanege (viBajanege, saqSiTxge) nAvu sikukxvudilalx:}
+\ullekha{guruva kuritu mADuvalilx barxhamxna Bajaneya hariyabeVku (savasaM. 7; nulicaM 1297-410).}}
+\end{entry}
+
+\begin{entry}
+\word{barxhamxmUtiR guruvAguvudu}
+\src{va}
+\meaning{\arthanonum{guruvAdavanu anuBAviyAgirabeVku, aMdare savaRsaMgaparitAyxgi\-yAgirabeVku. adalalxde, BakatxrAgabayasi baMdavarige iSaTxliMgavanunx koTuTx, parxtiyAgi darxvayxvanunx keVLidare, avaninUnx kamaR\-diMda mukatxnAgilalx hAgU barxhamx matotxmemx saqSiTx mADi\-dAga avanU huTuTxtAtxne eMdathaR (va.pa.koV. 272):}
+\ullekha{barxhamxmUtiR guruvAda, viSuNxmUtiR liMgavAda, rudarxmUtiR jaMgamavAda, iMtiV mUvaru baMda Bavava noVDA (savasaM. 8; moVLimA. 1768-578).}}
+\end{entry}
+
+
+%%%Ba
+\begin{entry}
+\word{BaMgitava mADuva iMdirxya karaNaMgaLu}
+\src{va}
+\meaning{\arthanonum{nAvu oMdu kalalxnunx ariyabeVkAdare adu matotxMdu kalilxniMda, nadiyiMda, giDamaragaLiMda, mane, manuSayx itAyxdigaLiMda BinanxveMdu tiLiyutetxVve. hAgalalxde, namage yAva vasutx\-vina jAcnxnavU uMTAgalAradu. alalxde, iMdirxya matutx aMtaHkaraNagaLu namage parxteyxVkatAjAcnxnavananxlalxde beVre riVtiya jAcnxnavanunx koDalAravu. Adare Atamxvu iMdirxya matutx aMtaHkaraNagaLa saMpakaR kaDidukoMDare, aMdare, anuBAvadalilxruvaMte, adoMdeV uLidare, adakekx hiVge BaMgita mADuvudu ilalxvAgi, aikayx mADuvudu barutatxde. Aga anuBAviyu vividha vasutxgaLalilx Ekateyanunx kANutAtxne (va.pa.koV. 272):}
+\ullekha{caMdarxmaMDaladalilx niMdipaR... I BaMgi\-tava mADuva iMdirxya karaNaMgaLalilx niMdiha pariyinenxMtuTo I BeVda, rasaPaladaMga, basavaNaNx modalAda parxmuKaru balalxru (savasaM. 8; moVLige. 1755-575).}}
+\end{entry}
+%hari baMda vidhi... ivara BaMgitava heVLaleVke?... (savasaM. 7; gupatxmaM. 380-130);
+
+
+\begin{entry}
+\word{Bakitxyalilx naDeva Bakatxru}
+\src{va}
+\meaning{\arthanonum{BakitxmAgaRda veYshiSaTxyXveMdare Bakatxnu tananxnunx
+ paramAtamxniMda parxteyxVkisikoLuLxvudu; pUjayxpUjaka
+ devxYtaBAvavilalxde Bakitx sAdhayxveV ilalx. Adare vacanakArara
+ parxkAra, Bakitx modalalilx AvashayxkavAdarU koneyavaregU sAdhakanu
+BakatxneV Agidadxre, liMgAMga sAmarasayxvAguvudilalx. I kAraNakAkxgi,
+moVLige mArayayxnu ``Bakitxyalilx naDeva BakatxriginenxtatxNa
+mukitxyoV'' eMdu keVLutAtxne (va.pa.koV. 282):}
+\ullekha{Bakitxyalilx naDeva BakatxriginenxtatxNa mukitxyo, niHkaLaMka malilxkAjuRnA ? (savasaM. 8; moVLimA. 1792-608)}}
+\end{entry}
+
+\begin{entry}
+\word{BajaneBAvaneyaLiyuvudu}
+\src{va}
+\meaning{\arthanonum{ililx BajaneyeMdare viBajaneyeMdathaR. Bakatxnu tAnu
+ parashivaniMda viBajitanAgidedxVneMdu tiLiyadiruvudeV
+ BajaneBAvavaLiyuvudu (va.pa.koV. 283):}
+\ullekha{nijada niNaRyavanaridu Bajane BAvane\-yaLidu tirxjagapatiyAgipapxvarAru heVLA ? (savasaM. 8; maDivA. 454-170).}}
+\end{entry}
+
+\begin{entry}
+\word{BAvada bayalige baNaNxviDuvudu}
+\src{va}
+\meaning{\arthanonum{BAvada bayalige baNaNxviTaTx basavaNaNx aikayxsithxtiyanunx talupidavanu. tananx veYyakatxkateyanunx (BAvavanunx) parashivanige apiRsi, A BAvadalilx bayalanunx (parashivananunx) tuMbikoMDidAdxne. A bayalu iMdirxyagoVcaravalalxdidadxrU A sAdhakanu bayalina sAkAramUtiRyAgidAdxne. basavaNaNxnu aMtha sAkAramUtiRyAdudariMda avananunx bayalige baNaNxviTaTxvaneMdu vaNiRsalAgide (va.pa.koV. 288):}
+\ullekha{BAvada bayaliMge baNaNxviTaTxnemamx basavayayxnu (savasaM. 5; niVlamamx. 820-261).}}
+\end{entry}
+
+\begin{entry}
+\word{BUtaBaviSayxdavxtaRmAnakekx horagAguvudu}
+\src{va}
+\meaning{\arthanonum{\hbox{namamx} parxtiyoMdu kirxyeyU oMdu deVsha (parxdeVsha) matutx oMdu
+ kAladalilx naDeyutatxde. `nAnu Odide', eMdare nananx Oduva kAyaR
+ oMdu nidiRSaTxkAladalilx pArxraMBavAgi oMdu nidiRSaTxkAladalilx
+ mugiyitu, oMdu nidiRSaTx parxdeVshadalilx naDeyitu, eMdathaR. hiVge,
+namamx asitxtavxkekx hAgU GaTanegaLige deVshakAlagaLa naMTu ide. Adare
+yAvAgalU nAnu parashivanalelxV bereteV idadxre Aga kAlada (BUta,
+BaviSayxtf matutx vataRmAnagaLa) vayxtAyxsa
+gotAtxguvudilalx. AdadxriMda liMgeYkayxnAdavanu
+BUtaBaviSayxdavxtaRmAnakekx horagAdavanu. adeV riVti paramAtamxnu elalx kaDeyU iruvudariMda avanu
+ deVshAtiVta. liMgeYkayxnU deVshAtiVtaneV (va.pa.koV. 291):}
+\ullekha{BUtaBaviSayxdavxtaRmAnakekx munanxve anAdiyalilx Adi jineVshavxraneMdidedx (savasaM. 8; manugu. 993-337).}}
+\end{entry}
+
+\begin{entry}
+\word{BUrxmadhayxdiMda meVle opipxpapx kaninxke}
+\src{va}
+\meaning{\arthanonum{hubibxna madhayxdalilx AjAcnxcakarxvide. adara meVliruvudu
+ sahasArxracakarx. adanunx oMdu kaneyxge hoVlisalAgide (6.33) (va.pa.koV. 292).}}
+\end{entry}
+
+%%%%ma
+\begin{entry}
+\word{mUgilalxdavaLu}
+\meaning{\arthanonum{mUgu vAsane paDeyuva iMdirxya; Adare `vAsane' eMba padakekx
+ `hiMdina janamxda saMsAkxra' eMbathaRvU iruvudariMda
+ `mUgilalxdavaLu' eMdare, hiMdina janamxda vAsanegaLelalxvU suTuTx,
+ `mukitxyoVgayxLAgiruvavaLu' eMdathaRvAgutatxde (va.pa.koV. 309):}
+\ullekha{molemuDiyidadx\-DeVnu mUgilalxdavaLiMge ? (savasaM. 5; akakxma. 346-103).}}
+\end{entry}
+
+%raghu
+
+
+
