ta to ma, anubandha words sent to final proof

--- a/tex-for-print/jss-282-501.tex
+++ b/tex-for-print/jss-282-501.tex
@@ -1590,6 +1590,7 @@ tArakaM BavamahAbidhxtArakaM tatatxvXmeVva parishiVlanaM kuru ||
 \begin{entry}
 \word{tArakalakaSxNa}
 \src{kA}
+
 \smallskip
 \begin{shl}
 akAra, sAtivxka, ukAra rAjasa, makAra tAmasavu\\[1pt]
@@ -2319,7 +2320,9 @@ itAyxdi maMtarxdiMda, gaqhasathxru matutx vAnaparxsathxru `tirxyaMbaka' maMtarx 
 aginxritAyxdimaRMterxYjARbAloVpaniSadagxteYH |\\[1pt]
 saveRYrudUdhxlanaM kAyaRM BasamxnA sajaleVna ca ||\\[1pt]
 tirxyAyuSeVNa maMterxVNa budheYsitxyaRkf tirxpuMDarxkamf |\\[1pt]
-dhAyaRM sadA divxjasherxVSeThxYdhAmiRkeYveRVda pArageYH ||\\[1pt]
+dhAyaRM sadA divxjasherxVSeThxYdhAmiRkeYveRVda pArageYH ||
+\end{shl}
+\begin{shl}
 meVdhAviVtAyxdinA vA{\char'263}pi barxhamxcAriV dineV dineV |\\[1pt]
 BasamxnA sajaleVneYva dhArayeVcacx tirxpuMDarxkamf ||\\[1pt]
 tirxyaMbakeVNa maMterxVNa parxNaveVna shiveVna ca |\\[1pt]
