jss-811-879.tex is added

--- a/mainfile.tex
+++ b/mainfile.tex
@@ -13,7 +13,7 @@
 
 \input macros
 \input dictionary
-\input anu-dictionary
+%\input anu-dictionary
 \begin{document}
 %\fontsize{12pt}{14pt}\selectfont
 %\frontmatter
@@ -22,17 +22,8 @@
 
 \begin{multicols}{2}
 \setlength{\columnseprule}{.5pt}
-%\input tex-for-print/jss_consolidated1
-%\input tex-for-print/jss-001-281
+\input tex-for-print/jss_consolidated1
 \newpage
-\input tex-for-print/anubandha-1.tex
-%\input tex-for-print/letter_ma
-%\newpage
-%\input 002
-%\input 007
-%\input format
-%\input 009
-%\input 011
-%\input 013
+%\input tex-for-print/anubandha-1.tex
 \end{multicols}
 \end{document}
