6 pages are corrected

--- a/tex-for-print/jss_consolidated1.tex
+++ b/tex-for-print/jss_consolidated1.tex
@@ -464,25 +464,25 @@ BakitxveYRrAgayxmaBAyxsoV dhAyxnameVkAMtaseVvanamf |\\[1pt]
 BikASxTanaM liMgapUjA samxraNaM satataM mama ||\\[1pt]
 EtAni yoVgASATxMgAni yoVgasheYvasayx liMginaH |
 \end{shl}
-\smallskip%raghu
+\smallskip
 \pauthor{(pAra. A., 10. 55-56)}
 \newmeaning{\artha{yoVgada eMTu aMgagaLu.}}
-\newmeaning{\ni{yoVgASAkxMga - yoVgASATxMgaM - aswTx aMgAni yasayx tatf aSATxMgaM, yoVgasayx aSATxMgaM - yoVgASAThxMgaM}}
+\newmeaning{\ni{aswTx aMgAni yasayx tatf - aSATxMgaM; yoVgasayx aSATxMgaM - yoVgASATxMgaM}}
 \end{entry}
 
 \begin{entry}
 \word{yoVgi}
 \src{va}
-\meaning{\arthanonum{manoVnigarxhavanunx mADidavanu yatiH tapapxsithx.}
-\ullekha{yoVgi joVgi sharxvaNa sanAyxsi kALAmuKi pAshupati eMba SaDudashaRnada sheYvakamiRgaLa guruvu eMbudakekx nAcadavaraneVneMbenayAyx. (savasaM. 3; cenanxba. 1207-422).}}
+\meaning{\arthanonum{manoVnigarxhavanunx mADidavanu yati. tapapxsithx:}
+\ullekha{yoVgi-joVgi, sharxvaNa-sanAyxsi, kALAmuKi pAshupati eMba SaDu\-dashaRnada sheYvakamiRgaLa guruvu, guruvu eMbudakekx nAcadavaraneVneMbenayAyx. (savasaM. 3; cenanxba. 1170-403).}}
 %niMdisuvanobabx, sutxtisuvanobabx... ivaribabxru namamx shivayoVgiya paramabaMdhugaLayAyx... (savasaM. 1; basava. 1245-343); aTuTxdanaDaluMTe? suTuTxda suDaluMTe?... jAcnxnAginxyalilx dagadhxvAda paramashivayoVgige... (savasaM. 2; alalxma. 751-206); yoVgi enalilalx, BoVgi enalilalx... (savasaM. 3; cenanxba. 673-201); Aturada dhAyxnadiMda dhAvatigoMDe... AtumanaMtara paravanaridaDe Atana yoVgi... (savasaM. 5; akakxma. 56-20);.}}
-\newmeaning{\ni{yoVgi - yoVgiV - yoVgaH asimxnf asitx iti yoVgiV}}
+\newmeaning{\ni{yoVgaH asimxnf asitx iti - yoVgiV}}
 \end{entry}
 
 \begin{entry}
 \word{yoVgirATf}
 \src{saM}
-\meaning{\arthanonum{kaNuNxgaLanunx athavA daqSiTxyanunx aMtamuRKavAgi mADi, savxlapx adhARvaloVkanavanunx mADi, manoVneVtarxgaLiMda (aMtaraMgada neVtarxgaLiMda) paramAtamxnanunx niraMtaravAgi noVDuva shivayoVgi.}}
+\meaning{\arthanonum{kaNuNxgaLanunx athavA daqSiTxyanunx aMta\-muRKavAgi mADi, aMdare adhARvaloVkanavanunx mADi, manoVneVtarxgaLiMda (aMtaraMgada neVtarxgaLiMda) paramAtamx\-nanunx niraMtaravAgi noVDuva shivayoVgi.}}
 \smallskip
 \begin{shl}
 neVtarxM nimiVlateV nitayxM kiMcidunimxVliteV tathA |\\[1pt]
@@ -490,7 +490,7 @@ yoV manashacxkuSxSA barxhamx pashayxtiVti sa yoVgirATf ||
 \end{shl}
 \smallskip
 \pauthor{(shi. yoV. parx., 4. 34)}
-\newmeaning{\ni{yoVgirAtf - yoVgiSu rATf - yoVgirATf}}
+\newmeaning{\ni{yoVgiSu rATf - yoVgirATf}}
 \end{entry}
 
 %\begin{entry}
@@ -538,7 +538,7 @@ yoV manashacxkuSxSA barxhamx pashayxtiVti sa yoVgirATf ||
 
 \begin{entry}
 \word{rakeSx}
-\meaning{\arthanonum{BasamxgaLalilx, BUti, Basita, Basamx, kASxra, matutx rakeSxgaLeMba aidu bageya oMdu parxkAra. parashivana IshAnamuKadiMda janisida sumanA eMba keMpu baNaNxda hasuvina goVmayadiMda tayArAda Basamx. kaLaLxru, sapaR, huli modalAda kUrxra pArxNigaLiMdalU, BUta-pishAcAdigaLiMda rakaSxNe niVDuvudariMda rakASx eniside. moVkaSx kAyaRgaLalilx dharisuvaMtaha Basamx.}}
+\meaning{\arthanonum{BUti, Basita, Basamx, kASxra matutx rakeSxgaLeMba aidu bageya BasamxgaLalilx oMdu parxkAra. parashivana IshAnamuKadiMda janisida sumanA eMba keMpubaNaNxda hasuvina goVmayadiMda tayArAda Basamx. kaLaLxru, hAvu, huli modalAda kUrxra pArxNigaLiMdalU, BUta-pishAcAdigaLiMda rakaSxNe niVDuvudariMda idu `rakASx' eniside. moVkaSxkAyaRgaLalilx dharisuvaMtaha Basamx.}}
 \smallskip
 \begin{shl}
 rakASx ceVshAnavakAtxrXcacx naMdAdidAvxratoV{\char'263}Bavatf ||\\[1pt]
@@ -555,7 +555,7 @@ rakASx sAyxtf coVrasapeRVBoyxV vAyxGArxdiBayxshacx savaRdA ||
 \smallskip
 \pauthor{(kirx. sA. ulelxVKa; sheY. ra., BA-1, pu. 142)}
 \smallskip
-\newmeaning{\ullekha{A paMcagoVvugaLa goVmayadalilx viBUti Basamx kASxra rakeSx eMba paMcaviBUti utapxtayxvAyitutx. (savasaM. 13; \hbox{bAlasaM.} 333-138); BUtavA perxVtavasurarf pishAcarf Bavada BiVti sapaRM vaqshicxkaM mahAgarxhapiVDanA tatukaSxNadi saMharipa sAmathayxRdiM rakeSxyeMbA nAmavu (shivAciM. 41-4); BUteVshaniVshAnayxmuKade naBamAyutx shAMtAyxtiVta kaleyada{\rO}LA kaleyoLAdudeY sAtishaya citarxvaNaRda sumaneyada{\ra} goVmayadiMda rakeSxyAyutx (cebapu. 60-8).}}
+\newmeaning{\ullekha{A paMcagoVvugaLa goVmayadalilx viBUti Basamx kASxra rakeSx eMba paMcaviBUti utapxtayxvAyitutx. (savasaM. 13; \hbox{bAlasaM.} 333-138); BUtavA perxVtavasurarf pishAcarf Bavada BiVti sapaRM vaqshicxkaM mahAgarxhapiVDanA tatukaSxNadi saMharipa sAmathayxRdiM rakeSxyeMbA nAmavu (shivAciM. 41-4); BUteVshaniVshAnayxmuKade naBamAyutx shAMtayx\-tiVta kaleyada{\ro}LA kaleyoLAdudeY sAtishaya citarxvaNaRda sumaneyada{\ra} goVmayadiMda rakeSxyAyutx (cebapu. 60-8).}}
 \end{entry}
 %\arthanonum{BUti, Basita, Basamx, kASxra matutx rakeSxgaLeMba aidu bageya viBUtigaLalilx oMdu; BUta, pishAcAdigaLa bAdheyanunx pariharisuva oMdu bageya pavitarx Basamx; parashivana paMcamuKagaLalilx oMdAda IshAnayxmuKadiMda AkAshavU adariMda shAMtAyxtiVta eMba kaleyU A kaleyiMda citarxvaNaRda sumaneyeMba hesarina goVvU utapxtitxyAduvu. I goVvina goVmayavanunx maMtarxyukatxvAgi suTuTx mADida Basamx. idu garxhagaLiMduMTAguva upadarxvagaLanunx nAshapaDisutatxde.}
 
@@ -589,22 +589,22 @@ rakASx sAyxtf coVrasapeRVBoyxV vAyxGArxdiBayxshacx savaRdA ||
  sAmAjika naMbikegaLalolxMdu. viVrasheYvaru I
  sUtakavanAnxcarisabAradu, hAgU adanunx nivArisabeVkeMbudakekx vivara
 : shivadiVkeSx paDeda heMgasaru tamamx shariVravelalxvanUnx
- liMgashariVravanAnxgi mADikoMDa meVle, rajasavxleyiMdAgi tAvu
- nimaRlakAyadavareMdu tiLidukoLaLxbeVku hAgU diVkASxpAdoVdakadiMda
-sAnxnamADi, gurukAruNayxda mUlaka liMgasaMbaMdhavAgiruvavara dashaRna
-sapxshaRna saMBASaNegaLa mUlaka pAvanarAguvudeV rajasUtakanirasana.}
-\ullekha{rajasUtaka nirasanada vacanasUtarxveMteMdoDe : shivAcAra saMpananxralilx janitarAgi kirxyAshakitxyarenisi... nijanivAsakirxyeya biTuTx tolagalAgadu. (savasaM. 14; mumukitx. 2468-57).}}
-\newmeaning{\arthanonum{(parA: rajasUsxtaka)}}
-\newmeaning{\ni{rajasUtaka nirasana - rajasUsxtaka nirasanaM - rajasaH sUtakaM rajasUsxtakaM, tasayx rajasUsxtakasayx  nirasanaM  rajasUsxtakanirasanaM}}
+ liMgashariVravanAnxgi mADikoMDa meVle, rajasavxleyAdarU tAvu
+ nimaRla\-kAyadavareMdu tiLidukoLaLxbeVku hAgU diVkASxpAdoVdakadiMda
+sAnxna mADi, gurukAruNayxda mUlaka liMgasaMbaMdhavAgiruvavara dashaRna
+sapxshaRna saMBASaNegaLa mUlaka pAvanarAguvudeV rajasUtakanirasana:}
+\ullekha{rajasUtakanirasanada vacanasUtarxveMteMdoDe; shivAcArasaMpananxralilx janitarAgi, kirxyAshakitxyarenisi... nijanivAsakirxyeya biTuTx tolagalAgadu. (savasaM. 14; mumukitx. 54-56).}}
+\newmeaning{\ni{rajasaH sUtakaM - rajasUsxtakaM; tasayx rajasUsxtakasayx nirasanaM - rajasUsxtakanirasanaM}}
+\newmeaning{\arthanonum{\SEE{rajasUsxtaka}}}
 \end{entry}
 
 \begin{entry}
 \word{rajasUsxtaka}
 \src{va}
-\meaning{\arthanonum{paMcasUtakagaLalilx oMdu}
-\ullekha{jAtisUtaka biDadu, jananasUtaka biDadu. perxVtasUtaka biDadu, rajasUsxtaka biDadu, eMjalusUtaka biDadu. (savasaM. 3; cenanxba. 119-32); jAtisUtaka, perxVtasUtaka, janasUtaka, ucicxSaTxsUtaka, rajasUsxtakaveMba paMcasUtakaMgaLa kaLedu. (savasaM. 14; SaNumxKa. 439-229).}}
-\newmeaning{\arthanonum{(parA: rajasUtaka nirasana)}}
-\newmeaning{\ni{rajasUsxtaka - rajasUsxtakaM - rajasaH sUtakaM  rajasUsxtakaM}}
+\meaning{\arthanonum{paMcasUtakagaLalilx oMdu:}
+\ullekha{jAtisUtaka biDadu, jananasUtaka biDadu, perxVtasUtaka biDadu, rajasUsxtaka biDadu, eMjalusUtaka biDadu. (savasaM. 3; cenanxba. 119-32); jAtisUtaka, perxVtasUtaka, jananasUtaka, ucicxSaTx\-sUtaka, rajasUsxtakaveMba paMcasUtakaMgaLa kaLedu. (savasaM. 14; SaNumxKa. 439-229).}}
+\newmeaning{\ni{rajasaH sUtakaM - rajasUsxtakaM}}
+\newmeaning{\arthanonum{\SEE{rajasUtaka nirasana}}}
 \end{entry}
 %paMcAMga paMcAMgaveMdu kaLavaLagoMDu... maqtuyxsUtaka rajasUsxtaka - I paMcasUtakava... (savasaM. 12; nirAlaM. 1244-364);
 
@@ -626,14 +626,14 @@ sapxshaRna saMBASaNegaLa mUlaka pAvanarAguvudeV rajasUtakanirasana.}
 \begin{entry}
 \word{ravimada}
 \meaning{\arthanonum{aSaTxtanumadagaLalilx oMdu.}
-\ullekha{ravimadavetitxdalilx koVpAginxBaritanAgiha, shashimadavetitxdalilx ciMtABaritanAgiha, Atamxmadavetitxdalilx ahaMkAraBaritanAgiha. (savasaM. 3; cenanxba. 329-106); paqthivxmada salilamada pAvakamada pavanamada aMbaramada ravimada shashimada AtamxmadaveMba aSaTxmUtiRya madaMgaLu. (savasaM. 14; heVmaga. 1059-489); ravimadavetetx koVpAginxBaranAgi kolevx tiMdapeneMbanu (viVsheYpu. 7-100-19).}}
-\newmeaning{\ni{ravimada - ravimadaH - raveVH madaH - ravimadaH}}
+\ullekha{ravimadavetitxdalilx koVpAginx\-BaritanAgiha, shashimadavetitxdalilx ciMtABaritanAgiha, Atamxmadavetitxdalilx ahaMkAraBaritanAgiha. (savasaM. 3; cenanxba. 329-106); paqthivxmada salilamada pAvakamada pavanamada aMbaramada ravimada shashimada AtamxmadaveMba aSaTxmUtiRya madaMgaLu. (savasaM. 14; heVmaga. 1059-489); ravimadavetetx koVpAginxBaranAgi kolevx tiMdapeneMbanu (viVsheYpu. 7-100-19).}}
+\newmeaning{\ni{raveVH madaH - ravimadaH}}
 \end{entry}
 
 \begin{entry}
 \word{rasashudidhx}
 \src{saM}
-\meaning{\arthanonum{paMcAcAragaLalilx oMdAda shivAcArakekx saMbaMdhisida hadinAru shudidhxgaLalilx oMdu. ememx matutx kuriya hAlu, mosaru, tupapx, majijxge modalAdavugaLanunx biTuTx, yAvAgalU hasuvina utapxnanxgaLanunx sivxVkAramADuvudu.}}
+\meaning{\arthanonum{paMcAcAragaLalilx oMdAda shivAcArakekx saMbaMdhi\-sida hadinAru shudidhxgaLalilx oMdu. ememx matutx kuriya hAlu, mosaru, tupapx, majijxge modalAdavugaLanunx poratupaDisi, yAvAgalU hasuvina utapxnanxgaLanunx sivxVkarisuvudu.}}
 \smallskip
 \begin{shl}
 GaqtaM dadhi payasatxkarxM mAhiSaM cAvikaM tayxjeVtf |\\[1pt]
@@ -642,9 +642,11 @@ gavayxM tu savaRdA gArxhayxM rasashudidhxriyaM matA ||
 \smallskip
 \pauthor{(caM. A., kirx. pA., 9. 42)}
 \smallskip
-\newmeaning{\arthanonum{\SEE{SoVDashashudidhx}}}
 \newmeaning{\ni{rasashudidhx - rasashudidhxH - rasasayx shudidhxH rasashudidhxH}}
+\newmeaning{\arthanonum{\SEE{SoVDashashudidhx}}}
 \end{entry}
+
+%raghu, print sheet 647
 
 \begin{entry}
 \word{rasaparxsAda}
